theme/mitms/styles_mitms_common.css: Fix filter element spacing

--- a/theme/mitms/styles_mitms_common.css
+++ b/theme/mitms/styles_mitms_common.css
@@ -1,6 +1,16 @@
 
 /* Stylesheet for MITMS specific CSS */
 
+/*****************************************************************************/
+/** General **/
+/*****************************************************************************/
+
+/**
+ * Fix for filter
+ */
+fieldset#newfilter input[type="text"] {
+    margin-left: 5px;
+}
 
 
 /*****************************************************************************/
@@ -28,6 +38,7 @@ div.reportbuilderform div.fitem div.felement {
 /*****************************************************************************/
 /** Hierarchies **/
 /*****************************************************************************/
+
 body.hierarchy-item h2.main {
     text-align: left;
     width: 95%;
